# ugc_sprint_1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  python.yml
architecture/: as_is.puml  to_be.puml
benchmark/: README.md  ch.ipynb  ch_benchmark.ipynb  clickhouse.ipynb  docker-compose.yml  mongo.ipynb  mongo_benchmark.ipynb
benchmark/data/node1/: config.xml
data/node1/: config.xml
data/node2/: config.xml
data/node3/: config.xml
data/node4/: config.xml
etl/: Dockerfile  migrator.py  requirements.txt
etl/clickhouse/config/: kafka.xml  net.xml  ssl.xml
etl/migrations/: bookmarks.sql  likes.sql  views.sql
etl/utils/: ch.docker-compose.yml  consumer.py  producer.py
examples/: example.env
log/: docker-compose.yml
log/kibana/config/: kibana.yml
log/logstash/config/: logstash.conf
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: ugc.conf
postman/: UGC.postman_collection.json
ugc/: Dockerfile  main.py  requirements.txt
ugc/src/: __init__.py  __main__.py  dependency.py  main.py
ugc/src/api/: __init__.py
ugc/src/api/v1/: __init__.py  bookmark.py  event.py  language.py  like.py  rating.py  view.py  watched.py
ugc/src/core/: config.py  logger.py  utils.py
ugc/src/db/: kafka.py  utils.py
ugc/src/engines/message_broker/: general.py  kafka.py
ugc/src/middleware/: handlers_headers.py
ugc/src/schemas/: __init__.py  base.py  bookmark.py  language.py  like.py  producer.py  rating.py  view.py  watched.py
ugc/src/services/: __init__.py  bookmark.py  general.py  getters.py  language.py  like.py  rating.py  sentry.py  view.py  watched.py
ugc/tests/: conftest.py  settings.py
ugc/tests/src/: bookmarks_test.py  language_movie_test.py  likes_test.py  progress_test.py  rating_test.py  test_main_test.py  watched_movie_test.py
ugc/tests/testdata/: __init__.py
